openexr-c/include/imath_box.h

typedef struct Imath_3_0__Vec3_short__t_s Imath_3_0__Vec3_short__t;
typedef Imath_3_0__Vec3_short__t Imath_V3s_t;
typedef struct Imath_3_0__Vec3_int__t_s Imath_3_0__Vec3_int__t;
typedef Imath_3_0__Vec3_int__t Imath_V3i_t;
typedef struct Imath_3_0__Vec3_float__t_s Imath_3_0__Vec3_float__t;
typedef Imath_3_0__Vec3_float__t Imath_V3f_t;
typedef struct Imath_3_0__Vec3_double__t_s Imath_3_0__Vec3_double__t;
typedef Imath_3_0__Vec3_double__t Imath_V3d_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_short___t_s {
    Imath_V3s_t min;
    Imath_V3s_t max;
} __attribute__((aligned(2))) Imath_3_0__Box_Imath_3_0__Vec3_short___t;
typedef Imath_3_0__Box_Imath_3_0__Vec3_short___t Imath_Box3s_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_int___t_s {
    Imath_V3i_t min;
    Imath_V3i_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec3_int___t;
typedef Imath_3_0__Box_Imath_3_0__Vec3_int___t Imath_Box3i_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_float___t_s {
    Imath_V3f_t min;
    Imath_V3f_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec3_float___t;
typedef Imath_3_0__Box_Imath_3_0__Vec3_float___t Imath_Box3f_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_double___t_s {
    Imath_V3d_t min;
    Imath_V3d_t max;
} __attribute__((aligned(8))) Imath_3_0__Box_Imath_3_0__Vec3_double___t;
typedef Imath_3_0__Box_Imath_3_0__Vec3_double___t Imath_Box3d_t;
/** Extend the Box to include the given point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___extendBy(
    Imath_Box3s_t * this_
    , Imath_V3s_t const * point);
/** Extend the Box to include the given box. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___extendBy_1(
    Imath_Box3s_t * this_
    , Imath_Box3s_t const * box);
/** Make the box include the entire range of T. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___makeInfinite(
    Imath_Box3s_t * this_);
/** Return the size of the box. The size is of type `V`, defined as
(max-min). An empty box has a size of V(0), i.e. 0 in each dimension. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___size(
    Imath_Box3s_t const * this_
    , Imath_V3s_t * return_);
/** Return the center of the box. The center is defined as
(max+min)/2. The center of an empty box is undefined. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___center(
    Imath_Box3s_t const * this_
    , Imath_V3s_t * return_);
/** Return true if the given point is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___intersects(
    Imath_Box3s_t const * this_
    , _Bool * return_
    , Imath_V3s_t const * point);
/** Return true if the given box is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___intersects_1(
    Imath_Box3s_t const * this_
    , _Bool * return_
    , Imath_Box3s_t const * box);
/** Return the major axis of the box. The major axis is the dimension with
the greatest difference between maximum and minimum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___majorAxis(
    Imath_Box3s_t const * this_
    , unsigned int * return_);
/** Return true if the box is empty, false otherwise. An empty box's
minimum is greater than its maximum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___isEmpty(
    Imath_Box3s_t const * this_
    , _Bool * return_);
/** Return true if the box is larger than a single point, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___hasVolume(
    Imath_Box3s_t const * this_
    , _Bool * return_);
/** Return true if the box contains all points, false otherwise.
An infinite box has a mimimum of`V::baseTypeMin()`
and a maximum of `V::baseTypeMax()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___isInfinite(
    Imath_Box3s_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___copy(
    Imath_Box3s_t * this_
    , Imath_Box3s_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___move(
    Imath_Box3s_t * this_
    , Imath_Box3s_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___dtor(
    Imath_Box3s_t * this_);
/** Empty by default */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___ctor(
    Imath_Box3i_t * this_);
/** Construct a bounding box that contains a single point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___ctor_1(
    Imath_Box3i_t * this_
    , Imath_V3i_t const * point);
/** Construct a bounding box with the given minimum and maximum points */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___ctor_2(
    Imath_Box3i_t * this_
    , Imath_V3i_t const * minV
    , Imath_V3i_t const * maxV);
/** Equality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int____eq(
    Imath_Box3i_t const * this_
    , _Bool * return_
    , Imath_Box3i_t const * src);
/** Inequality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int____ne(
    Imath_Box3i_t const * this_
    , _Bool * return_
    , Imath_Box3i_t const * src);
/** Set the Box to be empty. A Box is empty if the mimimum is
greater than the maximum. makeEmpty() sets the mimimum to
`numeric_limits<T>::max()` and the maximum to
`numeric_limits<T>::lowest()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___makeEmpty(
    Imath_Box3i_t * this_);
/** Extend the Box to include the given point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___extendBy(
    Imath_Box3i_t * this_
    , Imath_V3i_t const * point);
/** Extend the Box to include the given box. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___extendBy_1(
    Imath_Box3i_t * this_
    , Imath_Box3i_t const * box);
/** Make the box include the entire range of T. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___makeInfinite(
    Imath_Box3i_t * this_);
/** Return the size of the box. The size is of type `V`, defined as
(max-min). An empty box has a size of V(0), i.e. 0 in each dimension. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___size(
    Imath_Box3i_t const * this_
    , Imath_V3i_t * return_);
/** Return the center of the box. The center is defined as
(max+min)/2. The center of an empty box is undefined. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___center(
    Imath_Box3i_t const * this_
    , Imath_V3i_t * return_);
/** Return true if the given point is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___intersects(
    Imath_Box3i_t const * this_
    , _Bool * return_
    , Imath_V3i_t const * point);
/** Return true if the given box is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___intersects_1(
    Imath_Box3i_t const * this_
    , _Bool * return_
    , Imath_Box3i_t const * box);
/** Return the major axis of the box. The major axis is the dimension with
the greatest difference between maximum and minimum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___majorAxis(
    Imath_Box3i_t const * this_
    , unsigned int * return_);
/** Return true if the box is empty, false otherwise. An empty box's
minimum is greater than its maximum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___isEmpty(
    Imath_Box3i_t const * this_
    , _Bool * return_);
/** Return true if the box is larger than a single point, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___hasVolume(
    Imath_Box3i_t const * this_
    , _Bool * return_);
/** Return true if the box contains all points, false otherwise.
An infinite box has a mimimum of`V::baseTypeMin()`
and a maximum of `V::baseTypeMax()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___isInfinite(
    Imath_Box3i_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___copy(
    Imath_Box3i_t * this_
    , Imath_Box3i_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___move(
    Imath_Box3i_t * this_
    , Imath_Box3i_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_int___dtor(
    Imath_Box3i_t * this_);
/** Empty by default */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___ctor(
    Imath_Box3f_t * this_);
/** Construct a bounding box that contains a single point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___ctor_1(
    Imath_Box3f_t * this_
    , Imath_V3f_t const * point);
/** Construct a bounding box with the given minimum and maximum points */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___ctor_2(
    Imath_Box3f_t * this_
    , Imath_V3f_t const * minV
    , Imath_V3f_t const * maxV);
/** Equality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float____eq(
    Imath_Box3f_t const * this_
    , _Bool * return_
    , Imath_Box3f_t const * src);
/** Inequality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float____ne(
    Imath_Box3f_t const * this_
    , _Bool * return_
    , Imath_Box3f_t const * src);
/** Set the Box to be empty. A Box is empty if the mimimum is
greater than the maximum. makeEmpty() sets the mimimum to
`numeric_limits<T>::max()` and the maximum to
`numeric_limits<T>::lowest()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___makeEmpty(
    Imath_Box3f_t * this_);
/** Extend the Box to include the given point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___extendBy(
    Imath_Box3f_t * this_
    , Imath_V3f_t const * point);
/** Extend the Box to include the given box. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___extendBy_1(
    Imath_Box3f_t * this_
    , Imath_Box3f_t const * box);
/** Make the box include the entire range of T. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___makeInfinite(
    Imath_Box3f_t * this_);
/** Return the size of the box. The size is of type `V`, defined as
(max-min). An empty box has a size of V(0), i.e. 0 in each dimension. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___size(
    Imath_Box3f_t const * this_
    , Imath_V3f_t * return_);
/** Return the center of the box. The center is defined as
(max+min)/2. The center of an empty box is undefined. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___center(
    Imath_Box3f_t const * this_
    , Imath_V3f_t * return_);
/** Return true if the given point is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___intersects(
    Imath_Box3f_t const * this_
    , _Bool * return_
    , Imath_V3f_t const * point);
/** Return true if the given box is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___intersects_1(
    Imath_Box3f_t const * this_
    , _Bool * return_
    , Imath_Box3f_t const * box);
/** Return the major axis of the box. The major axis is the dimension with
the greatest difference between maximum and minimum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___majorAxis(
    Imath_Box3f_t const * this_
    , unsigned int * return_);
/** Return true if the box is empty, false otherwise. An empty box's
minimum is greater than its maximum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___isEmpty(
    Imath_Box3f_t const * this_
    , _Bool * return_);
/** Return true if the box is larger than a single point, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___hasVolume(
    Imath_Box3f_t const * this_
    , _Bool * return_);
/** Return true if the box contains all points, false otherwise.
An infinite box has a mimimum of`V::baseTypeMin()`
and a maximum of `V::baseTypeMax()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___isInfinite(
    Imath_Box3f_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___copy(
    Imath_Box3f_t * this_
    , Imath_Box3f_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___move(
    Imath_Box3f_t * this_
    , Imath_Box3f_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_float___dtor(
    Imath_Box3f_t * this_);
/** Empty by default */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___ctor(
    Imath_Box3d_t * this_);
/** Construct a bounding box that contains a single point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___ctor_1(
    Imath_Box3d_t * this_
    , Imath_V3d_t const * point);
/** Construct a bounding box with the given minimum and maximum points */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___ctor_2(
    Imath_Box3d_t * this_
    , Imath_V3d_t const * minV
    , Imath_V3d_t const * maxV);
/** Equality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double____eq(
    Imath_Box3d_t const * this_
    , _Bool * return_
    , Imath_Box3d_t const * src);
/** Inequality */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double____ne(
    Imath_Box3d_t const * this_
    , _Bool * return_
    , Imath_Box3d_t const * src);
/** Set the Box to be empty. A Box is empty if the mimimum is
greater than the maximum. makeEmpty() sets the mimimum to
`numeric_limits<T>::max()` and the maximum to
`numeric_limits<T>::lowest()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___makeEmpty(
    Imath_Box3d_t * this_);
/** Extend the Box to include the given point. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___extendBy(
    Imath_Box3d_t * this_
    , Imath_V3d_t const * point);
/** Extend the Box to include the given box. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___extendBy_1(
    Imath_Box3d_t * this_
    , Imath_Box3d_t const * box);
/** Make the box include the entire range of T. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___makeInfinite(
    Imath_Box3d_t * this_);
/** Return the size of the box. The size is of type `V`, defined as
(max-min). An empty box has a size of V(0), i.e. 0 in each dimension. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___size(
    Imath_Box3d_t const * this_
    , Imath_V3d_t * return_);
/** Return the center of the box. The center is defined as
(max+min)/2. The center of an empty box is undefined. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___center(
    Imath_Box3d_t const * this_
    , Imath_V3d_t * return_);
/** Return true if the given point is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___intersects(
    Imath_Box3d_t const * this_
    , _Bool * return_
    , Imath_V3d_t const * point);
/** Return true if the given box is inside the box, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___intersects_1(
    Imath_Box3d_t const * this_
    , _Bool * return_
    , Imath_Box3d_t const * box);
/** Return the major axis of the box. The major axis is the dimension with
the greatest difference between maximum and minimum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___majorAxis(
    Imath_Box3d_t const * this_
    , unsigned int * return_);
/** Return true if the box is empty, false otherwise. An empty box's
minimum is greater than its maximum. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___isEmpty(
    Imath_Box3d_t const * this_
    , _Bool * return_);
/** Return true if the box is larger than a single point, false otherwise. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___hasVolume(
    Imath_Box3d_t const * this_
    , _Bool * return_);
/** Return true if the box contains all points, false otherwise.
An infinite box has a mimimum of`V::baseTypeMin()`
and a maximum of `V::baseTypeMax()`. */
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___isInfinite(
    Imath_Box3d_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___copy(
    Imath_Box3d_t * this_
    , Imath_Box3d_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___move(
    Imath_Box3d_t * this_
    , Imath_Box3d_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_double___dtor(
    Imath_Box3d_t * this_);